--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-facebook-login": "^4.1.1",
     "react-firebaseui": "^4.1.0",
+    "react-hooks": "^1.0.1",
     "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
