--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react-facebook-login": "^4.1.1",
     "react-firebaseui": "^4.1.0",
     "react-hooks": "^1.0.1",
+    "react-interpolate-component": "^0.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-translate-component": "^0.15.1"
   },
   "scripts": {
     "start": "react-scripts start",
